# world-cup-2026-forecast

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: allowed_teams.yaml  world_cup_2026_bracket.json  world_cup_groups.json  world_cup_groups_48.json
data/outputs/simulation/: champion_distribution.csv  champion_distribution.parquet  match_logs.parquet  summary_metadata.json  team_probabilities.csv  team_probabilities.parquet
docs/: ARCHITECTURE.md  PROJECT_STATUS.md  dev_context_prompt.md  engineering.md  engineering_notes.md  modeling.md  modeling_notes.md
docs/images/: README.md
experiments/: 05_match_model_benchmark.ipynb  README.md
notebooks/: 00_eda_match_dataset.ipynb  01_eda_player_data.ipynb  01_match_model_experiments.ipynb  02_simulation_analysis.ipynb  02_team_strength_exploration.ipynb  03_world_cup_forecast_story.ipynb  README.md
src/evaluation/: validate_predictor.py
src/features/: build_elo_ratings.py  build_latest_team_features.py  match_features.py  team_features.py  team_filtering.py
src/models/match_outcome/: predict.py  train.py
src/models/team_strength/: elo_model.py
src/pipelines/: ingest_data.py
src/simulation/: aggregation.py  bracket_builder.py  config.py  group_stage.py  knockout_stage.py  parallel.py  predictor_adapter.py  qualification.py  reporting.py  run_simulation.py  sampling.py  structures.py  tournament.py
src/utils/: config.py  helpers.py  team_names.py
